fixed travelInstructions flickering issue

--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,9 @@ body {
   z-index: -1;
   position: absolute;
   height: 100%;
-  width: 100%;
+  width: 98%;
   padding-top: 20px;
+  pointer-events:none;
 }
 #map {
 
